Fix Overflow; Add Fade In; Round Corners

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,11 @@
     src: url("//db.onlinewebfonts.com/t/3d326e4a3753d0f1220967bb7cbc88b7.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/3d326e4a3753d0f1220967bb7cbc88b7.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/3d326e4a3753d0f1220967bb7cbc88b7.woff") format("woff"), url("//db.onlinewebfonts.com/t/3d326e4a3753d0f1220967bb7cbc88b7.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/3d326e4a3753d0f1220967bb7cbc88b7.svg#Boldie") format("svg");
 }
 
+@keyframes fadeIn{
+    0%{ opacity:0; }
+    100% {opacity: 1;}
+}
+
 html {
     font-family: 'Boldie', Helvetica, Tahoma;
     background: url(../img/background.png);
@@ -36,6 +41,8 @@ a {
     color: inherit;
 }
 
+
+
 .front-content,
 .content {
     display: flex;
@@ -43,6 +50,7 @@ a {
     justify-content: center;
     gap: 2px;
     margin-top: 10px;
+    animation: fadeIn 4s;
 }
 
 .content {
@@ -88,23 +96,34 @@ a {
     color: black;
     height: 1000px;
     margin-top: 13px;
+    padding: 1em;
+    overflow: hidden;
+}
+
+.right{
+    width: 700px;
+    margin-right: 30px;
 }
 
 .right-top{
     border-radius: 10px;
+    overflow: hidden;
     background-color: antiquewhite;
     color: black;
     border: 1px solid rgba(118, 218, 60, 0.5);
-    height: 348px;
+    height: 315px;
+    padding: 1em;
 }
 
 .directions-container{
+    overflow: hidden;
     border-radius: 10px;
     background-color: antiquewhite;
     color: black;
     margin-top: 20px;
     border: 1px solid rgba(118, 218, 60, 0.5);
     height: 1000px;
+    padding: 1em;
 }
 
 .front-item {
@@ -119,6 +138,7 @@ a {
     margin: 10px;
     font-size: 20px;
 
+
 }
 
 .nav a:hover {
@@ -126,9 +146,14 @@ a {
 
 }
 
+.nav ul{
+    list-style-type: none;
+}
+
 div img {
     width: 300px;
     height: 350px;
+    border-radius: 10px;
 }
 
 .left img{
